Fixed overflow issue in card

--- a/src/homepage.scss
+++ b/src/homepage.scss
@@ -84,3 +84,11 @@
         margin-top: 1.2rem;
     }
 }
+
+@media only screen and (max-width: 570px) {
+    #homepage-container {
+        #button-start, #links {
+            margin-top: 2.5rem;
+        }
+    }
+}
